--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Biglietto treno</title>
 </head>
 <body>
-
+    <h1 id="prezzo_biglietto_finale"></h1>
 
     <script type="text/javascript" src="./js/app.js" defer></script>
 </body>
